KeePassDroid (2.0.5)
 * Add .kdbx Twofish support from drizzt
 * Improve password generator randomness
 * Handle new Google Drive style links (closes: #74)
 * Fix crash on initial .kdbx entry.
 * Don't return to file list after creating databases.

KeePassDroid (2.0.4)
 * Fix notification icons (closes: #60)
 * Add warning about non-Latin1 characters (closes: #64)
 * Add support for creating .kdbx databases, make this the default

KeePassDroid (2.0.3)
 * Improve password font handling. Handle failure to load font gracefully
 * Work around device bugs with FLAG_SECURE
 * Shorter English text for Show/hide password, so it fits on the action bar 
     on more phones.

KeePassDroid (2.0.2)
 * Fix crash on incorrect password (closes: #776)

KeePassDroid (2.0.1)
 * Fix Greek translations
 * Updated Russian translations from filimonic
 * Update Spanish translations (closes: #766)
 * Update Czech translations (closes: #743)
 * New password font (closes: #451)
 * Initial material design updates
 * Prevent screenshots/recent apps preview of password screens
     (closes: 680, 756)
 * Fix native encryption libraries on 64-bit devices

KeePassDroid (2.0)
 * Remove beta warning
 * Fix download URLs
 * Add Hebrew translations from Arthur Zamarin
 * Updated German translations from MaDill
 * Updated French translations from Bruno Parmentier
 * Updated Danish translations from Frederik Svarre
 * Add Greek translations from RaptorTFX

KeePassDroid (1.99.11)
 * Add support for decoding field references (closes: #247)
 * Remove bad asserts (closes: #606)
 * Add Latvian translations from Raimonds
 * Add Basque translations from dgarciabad
 * Polish transalation fix
 * Responsiveness improvements
 * Better support for read-only database files
 * Output header hash for .kdb files

KeePassDroid (1.99.10)
 * Fix crashes on SELinux enabled devices

KeePassDroid (1.99.9)
 * Fix crashes on some Android 4.3 and x86 devices

KeePassDroid (1.99.8)
 * Fix crash in filename lookup