@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
- Copyright 2009-2014 Brian Pellin.
+ Copyright 2009-2016 Brian Pellin.
      
  This file is part of KeePassDroid.
 
@@ -50,11 +50,13 @@
     <string name="show_read_only_warning">show_read_only_warning</string>
     <string name="sort_key">sort_key</string>
     <string name="timeout_key">timeout_key</string>
+    <string name="saf_key">storage_access_framework_key</string>
     <bool name="maskpass_default">true</bool>
     <bool name="keyfile_default">true</bool>
     <bool name="sort_default">true</bool>
     <bool name="omitbackup_default">true</bool>
     <bool name="recentfile_default">true</bool>
+    <bool name="saf_default">false</bool>
     
     <string name="clipboard_timeout_default">300000</string>
     <string-array name="clipboard_timeout_values">
