@@ -1,3 +1,5 @@
+ * Support Storage Access Framework in browse links.
+
 KeePassDroid (2.0.5)
  * Add .kdbx Twofish support from drizzt
  * Improve password generator randomness
